fixed material icons spacing

--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -115,4 +115,5 @@ header:before {
 .material-icons {
   display: inline-flex;
   vertical-align: top;
+  color: #ffb140 !important;
 }
