--- a/app/static/css/cms.css
+++ b/app/static/css/cms.css
@@ -91,4 +91,5 @@
 .material-icons {
   display: inline-flex;
   vertical-align: top;
+  color: #ffb140 !important;
 }
