--- a/app/static/css/editor.css
+++ b/app/static/css/editor.css
@@ -38,3 +38,9 @@ label {
   background: #ffb140 !important;
   color: #f4f4f4 !important;
 }
+
+.material-icons {
+  display: inline-flex;
+  vertical-align: top;
+  color: #ffb140 !important;
+}
