--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -65,4 +65,5 @@ button {
 .material-icons {
   display: inline-flex;
   vertical-align: top;
+  color: #ffb140 !important;
 }
