--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -97,3 +97,9 @@ link {
   background: #ffb140 !important;
   color: #f4f4f4 !important;
 }
+
+.material-icons {
+  display: inline-flex;
+  vertical-align: top;
+  color: #ffb140 !important;
+}
