--- a/app/static/css/reset.css
+++ b/app/static/css/reset.css
@@ -106,4 +106,5 @@ header:before {
 .material-icons {
   display: inline-flex;
   vertical-align: top;
+  color: #ffb140 !important;
 }
