--- a/app/static/css/stories.css
+++ b/app/static/css/stories.css
@@ -85,4 +85,5 @@
 .material-icons {
   display: inline-flex;
   vertical-align: top;
+  color: #ffb140 !important;
 }
